@@ -17,6 +17,8 @@ version ? (????-??-??):
     after domain filter was used (alec)
   - added Actions tab in Customer Info with cutoff suspending and warning 
     messages management as separate actions (alec)
+  - Balance Sheet: fixed memory usage problem and increased speed of 
+    groups filtering (alec)
 
 version 1.11.3 Quetesh (2008-03-26):
 
